--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             </div>
                             <h4 style="text-align: center;margin-top: 10%">Maksym Mostovyy</h4>
                             <h6 style="text-align: center;margin-top: 1%"><i>"Product Owner"</i></h6>
-                            <img class="img-fluid" src="thumbnail.jpg" alt="" />
+                            <img class="img-fluid" src="thumbnail_maksym.jpg" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -301,8 +301,8 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/">CLICK HERE to read about me.</a></h3>
-                                    <img class="img-fluid rounded mb-5" src="thumbnail.jpg" alt="" /><!-- Portfolio Modal - Text-->
+                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~mmostovyy2019/p1/hpage.html">CLICK HERE to read about me.</a></h3>
+                                    <img class="img-fluid rounded mb-5" src="thumbnail_maksym.jpg" alt="" /><!-- Portfolio Modal - Text-->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
