--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~vjoubert2019/p1/">CLICK HERE to read about me.</a></h3>
-                                    <img class="img-fluid rounded mb-5" src="preview_viviana.jpg" alt="" /><!-- Portfolio Modal - Text-->
+                                    <!-- VIVIANA INSERT YOUR TWO LINES OF CODE HERE -->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -241,8 +240,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~vpersaud/p1/">CLICK HERE to read about me.</a></h3>
-                                    <img class="img-fluid rounded mb-5" src="thumbnail_verneshia.jpg" alt="" /><!-- Portfolio Modal - Text-->
+                                    <!-- VERNESHIA INSERT YOUR TWO LINES OF CODE HERE -->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -271,8 +269,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~msilvestri2018/about/">CLICK HERE to read about me.</a></h3>
-                                    <img class="img-fluid rounded mb-5" src="thumbnail_monica.jpg" alt="" /><!-- Portfolio Modal - Text-->
+                                    <!-- MONICA INSERT YOUR TWO LINES OF CODE HERE -->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -301,8 +298,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~mmostovyy2019/p1/NewWeb/hpage.html">CLICK HERE to read about me.</a></h3>
-                                    <img class="img-fluid rounded mb-5" src="thumbnail_maksym.jpg" alt="" /><!-- Portfolio Modal - Text-->
+                                    <!-- MAKSYM INSERT YOUR TWO LINES OF CODE HERE -->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -331,8 +327,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~jabdool2016/p2/index.html">CLICK HERE to read about me.</a></h3>
-                                    <img class="img-fluid rounded mb-5" src="thumbnail_jason.jpg" alt="" /><!-- Portfolio Modal - Text-->
+                                    <!-- JASON INSERT YOUR TWO LINES OF CODE HERE -->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
