Added link to portfolio

--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <!-- MONICA INSERT YOUR TWO LINES OF CODE HERE -->
+                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~msilvestri2018/about/">CLICK HERE to read about me.</a></h3>
+                                    <img class="img-fluid rounded mb-5" src="thumbnail_monica.jpg" alt="" /><!-- Portfolio Modal - Text-->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
