--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <!-- VERNESHIA INSERT YOUR TWO LINES OF CODE HERE -->
+                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~vpersaud/p1/index.html">CLICK HERE to read about me.</a></h3>
+                                    <img class="img-fluid rounded mb-5" src="thumbnail_verneshia.jpg" alt="" /><!-- Portfolio Modal - Text-->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -269,8 +270,10 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
+<!-- ******************************************************** COPY AND EDIT THIS BIT OF CODE FOR MILESTONE 0 *********************************************************   -->                                
                                     <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~msilvestri2018/about/">CLICK HERE to read about me.</a></h3>
                                     <img class="img-fluid rounded mb-5" src="thumbnail_monica.jpg" alt="" /><!-- Portfolio Modal - Text-->
+<!-- ******************************************************** /COPY AND EDIT THIS BIT OF CODE FOR MILESTONE 0 ********************************************************  -->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
