Updating changes- adding "about me" page link and thumbnail photo

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                   <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~vjoubert2019">CLICK HERE to read about me.</a></h3>
-                                    <img class="img-fluid rounded mb-5" src="preview_Viviana.jpg" alt="" /><!-- Portfolio Modal - Text-->
+                                   <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~vjoubert2019/p1/">CLICK HERE to read about me.</a></h3>
+                                    <img class="img-fluid rounded mb-5" src="preview_viviana.jpg" alt="" /><!-- Portfolio Modal - Text-->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
