--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 5-->
+        <!-- Portfolio Modal 5: Jason -->
         <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-labelledby="portfolioModal5Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content">
@@ -332,6 +332,8 @@
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <!-- JASON INSERT YOUR TWO LINES OF CODE HERE -->
+                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~jabdool2016/p2/index.html">CLICK HERE to read about me.</a></h3>
+                                    <img class="img-fluid rounded mb-5" src="thumbnail_jason.jpg" alt="" /><!-- Portfolio Modal - Text -->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
