Added my Link and Thumbnail Image

--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <!-- JASON INSERT YOUR TWO LINES OF CODE HERE -->
+                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~jabdool2016/p2/index.html">CLICK HERE to read about me.</a></h3>
+                                    <img class="img-fluid rounded mb-5" src="thumbnail_jason.jpg" alt="" /><!-- Portfolio Modal - Text -->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
