--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~mmostovyy2019/p1/OldWeb/hpage.html">CLICK HERE to read about me.</a></h3>
+                                    <h3 class="mb-5"><a href="https://lamp.cse.fau.edu/~mmostovyy2019/p2/index.html">CLICK HERE to read about me.</a></h3>
                                     <img class="img-fluid rounded mb-5" src="thumbnail_maksym.jpg" alt="Preview of Mak personal website" /><!-- Portfolio Modal - Text-->
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
